fix(prose): adjust margin-top for improved spacing

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -119,7 +119,7 @@
   color: var(--fg-deeper);
   font-weight: 800;
   font-size: 2.25em;
-  margin-top: 0;
+  margin-top: 1em;
   margin-bottom: 0.8888889em;
   line-height: 1.1111111;
 }
